--- a/templates/pet.html
+++ b/templates/pet.html
@@ -57,6 +57,6 @@
   </section>
   <section id="edit-delete">
       <a href="{{url_for('edit_pet', id=pet.id)}}"><i class="far fa-edit"></i>Edit</a>
-      <a href="#"><i class="far fa-trash-alt"></i>Delete</a>
+      <a href="{{url_for('delete_pet', id=pet.id)}}"><i class="far fa-trash-alt"></i>Delete</a>
   </section>
 {% endblock %}
